--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,14 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-header><ion-toolbar><ion-title>MoodMate</ion-title></ion-toolbar></ion-header>
+<ion-content class="ion-padding">
+  <ion-button routerLink="/add">Add Mood</ion-button>
+  <ion-button routerLink="/quote">Quote</ion-button>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-list *ngIf="moods.length">
+    <ion-item *ngFor="let mood of moods">
+      <ion-label>
+        <h2>{{ mood.date }}</h2>
+        <p>Mood: {{ mood.moodValue }} — {{ mood.note || 'No note' }}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
