--- a/src/app/add-mood/add-mood.page.html
+++ b/src/app/add-mood/add-mood.page.html
@@ -11,6 +11,7 @@
     <ion-card-header>
       <ion-card-title>How are you feeling?</ion-card-title>
     </ion-card-header>
+    <!--This is for the emoji buttons to be used-->
     <ion-card-content class="emoji-buttons">
       <ion-button
         *ngFor="let emoji of moodOptions"
