--- a/src/app/quote/quote.page.html
+++ b/src/app/quote/quote.page.html
@@ -1,17 +1,21 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Daily Quote</ion-title>
+    <ion-title>Words of Wisdom</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
   <ion-card>
-    <ion-card-content>
+    <ion-card-content class="quotes">
       {{ quote }}
     </ion-card-content>
   </ion-card>
 
   <ion-button expand="block" (click)="loadQuote()">
     New Quote
+  </ion-button>
+
+  <ion-button routerlink="/home" routerDirection="back">
+    Home
   </ion-button>
 </ion-content>
